--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,17 @@
 **********************************************/
 
 :root {
-  --color-primary-dark: #1080b4;
-  --color-primary: #2183B2;
+  --color-primary-dark: #1c1e1f;
+  --color-primary: #1F2223;
   --color-primary-light: #44aec9;
-  --color-secondary: #e74c3c;
+  --color-secondary: #3BD98F;
+  --color-secondary-light: #55e9a4;
   --color-grey-dark: #777;
   --color-grey: #e1e0e0;
   --color-grey-light: #d4d6d8;
-  --color-grey-light-2: #fafafa;
+  --color-grey-light-2: #dbdada;
   --color-white: #fff;
-  --color-dark: #1D2424;
+  --color-white-second: #D1CFCC;
 }
 
 /**********************************************
@@ -77,6 +78,8 @@ main {
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 100vh;
+  background: var(--color-primary);
 }
 
 
@@ -119,7 +122,7 @@ nav {
 }
 
 .navigation .logo:hover {
-  color: rgb(219, 218, 218);
+  color: var(--color-grey-light-2);
 }
 
 .navigation__items {
@@ -144,6 +147,7 @@ nav {
 .navigation__items a:hover {
   border: none;
   margin-top: -3px;
+  color: var(--color-grey-light-2);
 }
 
 .navigation__scroll {
@@ -166,7 +170,6 @@ nav {
   font-size: 2rem;
   padding: 1rem 0;
   border: none;
-  border-bottom: 3px solid transparent;
   transition: all .3s;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
@@ -174,6 +177,7 @@ nav {
   -o-transition: all .3s;
   color: var(--color-white);
 }
+
 
 /**********************************************
           *** HERO SECTION *** - START
@@ -197,6 +201,30 @@ nav {
   line-height: 8rem;
   color: var(--color-white);
   margin-top: -4rem;
+  width: 60%;
+}
+
+.hero-text span{
+  display: inline-block;
+}
+
+.intro-end{
+  position: relative;
+}
+
+.intro-end::after{
+  content: '';
+  height: .5rem;
+  right: 5.8rem;
+  top: 7rem;
+  position: absolute;
+  width: 36.2rem;
+  background: var(--color-secondary);
+}
+
+.hilight-title{
+  font-weight: bold;
+  color: var(--color-secondary);
 }
 
 .hero-text img {
@@ -218,17 +246,22 @@ nav {
   display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translateX(-50%) translateY(-50%);
-  color: var(--color-white);;
+  color: var(--color-white);
   font: normal 400 20px/1 'Josefin Sans', sans-serif;
   letter-spacing: .1em;
   text-decoration: none;
-  transition: opacity .3s;
   outline: none;
   padding-top: 70px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
 }
 
 .hero-icon a:hover {
   opacity: .5;
+  margin-bottom: -10px;
 }
 
 .hero-icon a span {
@@ -236,17 +269,17 @@ nav {
   top: 0;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  width: 24px;
-  height: 24px;
+  width: 44px;
+  height: 44px;
   margin-left: -12px;
-  border-left: 10px solid var(--color-white);;
-  border-bottom: 10px solid var(--color-white);;
+  border-left: 10px solid var(--color-white);
+  border-bottom: 10px solid var(--color-white);
   -webkit-transform: rotate(-45deg);
   transform: rotate(-45deg);
-  -webkit-animation: pulse 1.5s infinite;
-  animation: pulse 1.5s infinite;
+  -webkit-animation: pulse 1.5s;
+  animation: pulse 1.5s;
   box-sizing: border-box;
-  z-index: 9999999999999999;
+  z-index: 999;
 }
 
 @-webkit-keyframes pulse {
@@ -266,212 +299,6 @@ nav {
 }
 
 /**********************************************
-            *** HOME SECTION *** - END
-**********************************************/
-
-.banner {
-  background: var(--color-primary);
-  background: -webkit-linear-gradient(to left, #31859bff, #31859bff);
-  width: 100%;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.circles {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.circles li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 2rem;
-  height: 2rem;
-  background: rgba(255, 255, 255, 0.2);
-  animation: animate 15s linear infinite;
-  bottom: 150px;
-  -webkit-animation: animate 15s linear infinite;
-}
-
-.circles li:nth-child(1) {
-  left: 25%;
-  top: 100%;
-  width: 8rem;
-  height: 8rem;
-  animation-delay: 1s;
-  animation-duration: 15s;
-
-}
-
-.circles li:nth-child(2) {
-  left: 15%;
-  top: 100%;
-  width: 8rem;
-  height: 8rem;
-  animation-delay: 0s;
-  animation-duration: 15s;
-}
-
-.circles li:nth-child(3) {
-  left: 70%;
-  top: 100%;
-  width: 8rem;
-  height: 8rem;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(4) {
-  left: 40%;
-  top: 100%;
-  width: 6rem;
-  height: 6rem;
-  animation-delay: 0s;
-  animation-duration: 18s;
-
-}
-
-.circles li:nth-child(5) {
-  left: 65%;
-  top: 100%;
-  width: 2rem;
-  height: 2rem;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(6) {
-  left: 75%;
-  top: 100%;
-  width: 10rem;
-  height: 10rem;
-  animation-delay: 3s;
-}
-
-.circles li:nth-child(7) {
-  left: 63%;
-  top: 100%;
-  width: 9rem;
-  height: 9rem;
-  animation-delay: 0s;
-}
-
-.circles li:nth-child(8) {
-  left: 50%;
-  top: 100%;
-  width: 2.5rem;
-  height: 2.5rem;
-  animation-delay: 15s;
-  animation-duration: 45s;
-}
-
-.circles li:nth-child(9) {
-  left: 18.5%;
-  top: 100%;
-  width: 3.5rem;
-  height: 3.5rem;
-  animation-delay: 2s;
-  animation-duration: 10s;
-}
-
-.circles li:nth-child(10) {
-  left: 85%;
-  top: 100%;
-  width: 6rem;
-  height: 6rem;
-  animation-delay: 0s;
-  animation-duration: 11s;
-}
-
-.circles li:nth-child(11) {
-  left: 70%;
-  top: 100%;
-  width: 3rem;
-  height: 3rem;
-  animation-delay: 1s;
-}
-
-.circles li:nth-child(12) {
-  left: 30%;
-  top: 100%;
-  width: 8rem;
-  height: 8rem;
-  animation-delay: 5.5s;
-}
-
-.circles li:nth-child(13) {
-  left: 35%;
-  top: 100%;
-  width: 5rem;
-  height: 5rem;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(14) {
-  left: 35%;
-  top: 100%;
-  width: 5rem;
-  height: 5rem;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(15) {
-  left: 35%;
-  top: 100%;
-  width: 5rem;
-  height: 5rem;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(16) {
-  left: 35%;
-  top: 100%;
-  width: 5rem;
-  height: 5rem;
-  animation-delay: 4s;
-}
-
-.circles li:nth-child(17) {
-  left: 35%;
-  top: 100%;
-  width: 5rem;
-  height: 5rem;
-  animation-delay: 4s;
-}
-
-@keyframes animate {
-
-  0% {
-    opacity: 1;
-    border-radius: 100%;
-    transform: translateY(0) rotate(0deg);
-    -webkit-transform: translateY(0) rotate(0deg);
-    -moz-transform: translateY(0) rotate(0deg);
-    -ms-transform: translateY(0) rotate(0deg);
-    -o-transform: translateY(0) rotate(0deg);
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
-  }
-
-  100% {
-    opacity: 0;
-    border-radius: 100%;
-    transform: translateY(-1000px) rotate(720deg);
-    -webkit-transform: translateY(-1000px) rotate(720deg);
-    -moz-transform: translateY(-1000px) rotate(720deg);
-    -ms-transform: translateY(-1000px) rotate(720deg);
-    -o-transform: translateY(-1000px) rotate(720deg);
-  }
-}
-
-/**********************************************
                 *** ABOUT ***
 **********************************************/
 
@@ -483,6 +310,8 @@ nav {
   margin: 0 auto;
   max-height: 75rem;
   height: 75rem;
+  position: relative;
+  background: var(--color-primary);
 }
 
 .about__content {
@@ -492,34 +321,41 @@ nav {
   align-items: center;
   width: 70%;
   height: 60%;
-
 }
 
 .about__content h1 {
   font-size: 4.8rem;
   text-align: center;
- color: var(--color-dark);
   margin: 1.4rem auto;
   max-width: 100%;
+  position: relative;
+  color: var(--color-white-second);
 }
 
-.high {
-  color: var(--color-primary);
+.about__content h1::after{
+  content: '';
+  height: .3rem;
+  left: .5rem;
+  top: 5.5rem;
+  position: absolute;
+  width: 5.5rem;
+  background: var(--color-secondary);
 }
 
 .about__content p {
-  max-width: 100%;
+  max-width: 61.5%;
   font-size: 1.8rem;
   line-height: 2.8rem;
   letter-spacing: .02rem;
   text-align: justify;
-  margin: 0 5rem;
+  margin: 0 auto;
   margin-top: 15px;
-  color: var(--color-dark);
+  color: var(--color-white-second);
 }
 
-.highlith{
-  color: var(--color-primary)
+.highlith {
+  padding: 0 .2rem;
+  background: var(--color-grey-dark);
 }
 
 .about__box-social {
@@ -532,7 +368,7 @@ nav {
 .about__box-social a {
   text-decoration: none;
   outline: none;
-  color: var(--color-dark);
+  color: var(--color-white-second);
 }
 
 .about__box-social img {
@@ -589,6 +425,7 @@ nav {
   color: var(--color-white);
   background: var(--color-secondary);
   border-radius: 2.5rem;
+  outline: none;
 }
 
 .about__btn a:nth-child(1) {
@@ -609,6 +446,54 @@ nav {
   height: 100%;
 }
 
+.about-icon {
+  height: 10rem;
+}
+
+.about-icon a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translateX(-50%) translateY(-50%);
+  color: var(--color-white);
+  font: normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  outline: none;
+  padding-top: 70px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+}
+
+.about-icon a:hover {
+  opacity: .5;
+  margin-bottom: -10px;
+}
+
+.about-icon a span {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 44px;
+  height: 44px;
+  margin-left: -12px;
+  border-left: 10px solid var(--color-white);
+  border-bottom: 10px solid var(--color-white);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: 1.5s;
+  animation: pulse 1.5s;
+  box-sizing: border-box;
+  z-index: 999;
+}
+
 /**********************************************
             *** SKILLS ***
 **********************************************/
@@ -619,6 +504,8 @@ nav {
   min-height: 100vh;
   display: flex;
   align-items: center;
+  position: relative;
+  background: var(--color-primary);
 }
 
 .skill__content {
@@ -643,7 +530,18 @@ nav {
   display: flex;
   justify-content: center;
   font-size: 4.8rem;
-  color: var(--color-primary);
+  position: relative;
+  color: var(--color-white-second);
+}
+
+.heading__primary::after{
+  content: '';
+  height: .3rem;
+  left: .5rem;
+  top: 5.5rem;
+  position: absolute;
+  width: 5.6rem;
+  background: var(--color-secondary);
 }
 
 .skill__content--box {
@@ -667,7 +565,7 @@ nav {
   top: 0%;
   left: 2%;
   cursor: pointer;
-  color: var(--color-dark);
+  color: var(--color-white-second);
   transition: transform .5s ease-in;
   -webkit-transition: transform .5s ease-in;
   -moz-transition: transform .5s ease-in;
@@ -675,7 +573,7 @@ nav {
   -o-transition: transform .5s ease-in;
 }
 
-.skill__content--stack:hover{
+.skill__content--stack:hover {
   animation: vertical 1s ease;
   animation-iteration-count: 1;
   -webkit-animation: vertical 1s ease;
@@ -809,6 +707,8 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+  background: var(--color-primary);
 }
 
 .project__portfolio {
@@ -833,7 +733,7 @@ nav {
   font-size: 3rem;
   max-width: 230%;
   margin-left: 5rem;
- color: var(--color-primary);
+  color: var(--color-secondary);
 }
 
 .project__content .desc {
@@ -843,6 +743,7 @@ nav {
   text-align: justify;
   max-width: 85%;
   margin: 1rem 0 0 5rem;
+  color: var(--color-white-second);
 }
 
 .project__box--stack {
@@ -875,7 +776,7 @@ nav {
   margin: .5rem 0 0 3rem;
 }
 
-.project__box--link a{
+.project__box--link a {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -885,11 +786,11 @@ nav {
 }
 
 .project__box--link img {
-  height: 4rem;
-  width: 4rem;
+  height: 3rem;
+  width:  3rem;
 }
 
-.project__box--link span{
+.project__box--link span {
   font-size: 1.5rem;
   text-decoration: none;
   text-transform: capitalize;
@@ -914,6 +815,54 @@ nav {
   object-fit: cover;
 }
 
+.project-icon {
+  height: 10rem;
+}
+
+.project-icon a {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translateX(-50%) translateY(-50%);
+  color: var(--color-white);
+  font: normal 400 20px/1 'Josefin Sans', sans-serif;
+  letter-spacing: .1em;
+  text-decoration: none;
+  outline: none;
+  padding-top: 70px;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+}
+
+.project-icon a:hover {
+  opacity: .5;
+  margin-bottom: -10px;
+}
+
+.project-icon a span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  width: 44px;
+  height: 44px;
+  margin-left: -12px;
+  border-left: 10px solid var(--color-white);
+  border-bottom: 10px solid var(--color-white);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: pulse 1.5s;
+  animation: pulse 1.5s;
+  box-sizing: border-box;
+  z-index: 999;
+}
+
 
 /**********************************************
             *** CONTACT ***
@@ -925,6 +874,7 @@ nav {
   min-height: 94.35vh;
   max-width: 100%;
   margin: auto;
+  background: var(--color-primary);
 }
 
 .contact-content {
@@ -951,7 +901,7 @@ nav {
   font-size: 2.5rem;
   width: 100%;
   margin-bottom: 15px;
-  color: var(--color-primary);
+  color: var(--color-secondary);
 }
 
 .contact-header-intro {
@@ -960,6 +910,7 @@ nav {
   text-align: center;
   width: 80%;
   margin-bottom: 15px;
+  color: var(--color-white-second);
 }
 
 .contact-button {
@@ -976,7 +927,7 @@ nav {
 .contact-button a {
   text-decoration: none;
   font-size: 2rem;
-  color: var(--color-dark);
+  color: var(--color-white-second);
   outline: none;
 }
 
@@ -1005,8 +956,10 @@ footer {
 }
 
 footer p {
-  color: var(--color-white);
   font-size: 2.1rem;
+  padding: 1rem .8rem;
+  color: var(--color-white);
+  background: var(--color-grey-dark);
 }
 
 /**********************************************
@@ -1031,7 +984,7 @@ footer p {
   transition-property: background-color, color;
 }
 
-.btn-animate{
+.btn-animate {
   transition: all .2s ease-in;
   -webkit-transition: all .2s ease-in;
   -moz-transition: all .2s ease-in;
@@ -1039,7 +992,7 @@ footer p {
   -o-transition: all .2s ease-in;
 }
 
-.btn-animate:hover{
+.btn-animate:hover {
   transform: translateY(-15px);
   -webkit-transform: translateY(-15px);
   -moz-transform: translateY(-15px);
@@ -1211,7 +1164,7 @@ footer p {
   height: 2.5px;
   bottom: 0px;
   left: 0;
-  background: var(--color-white);
+  background: var(--color-secondary);
   transform-origin: bottom right;
   transition: transform 0.4s cubic-bezier(0.86, 0, 0.07, 1);
 }
@@ -1298,30 +1251,30 @@ footer p {
   }
 }
 
-@keyframes vertical
-{
-  15%
-  {
-      transform: translateY(6px);
+@keyframes vertical {
+  15% {
+    transform: translateY(6px);
   }
-  30%
-  {
-      transform: translateY(-6px);
+
+  30% {
+    transform: translateY(-6px);
   }
-  50%
-  {
-      transform: translateY(4px);
+
+  50% {
+    transform: translateY(4px);
   }
-  65%
-  {
-      transform: translateY(-2px);
+
+  65% {
+    transform: translateY(-2px);
   }
-  80%
-  {
-      transform: translateY(2px);
+
+  80% {
+    transform: translateY(2px);
   }
-  100%
-  {
-      transform: translateY(0);
+
+  100% {
+    transform: translateY(0);
   }
 }
+
+
