--- a/css/mq.css
+++ b/css/mq.css
@@ -333,11 +333,11 @@
         position: relative;
     }
 
-    .heading__primary {
+    .skill__content-title h3 {
         font-size: 4rem;
     }
 
-    .heading__primary::after {
+    .skill__content-title h3::after {
         top: 4.5rem;
         width: 4.5rem;
     }
@@ -568,7 +568,7 @@
 
     /* SKILL SECTION */
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 4.5rem;
         width: 4.5rem;
     }
@@ -706,7 +706,7 @@
 
     /* SKILL SECTION */
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 4.5rem;
         width: 4.5rem;
     }
@@ -860,11 +860,11 @@
 
     /* SKILL SECTION */
 
-    .heading__primary {
+    .skill__content h3 {
         font-size: 3em;
     }
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3.5rem;
         width: 3.2rem;
     }
@@ -1001,7 +1001,7 @@
         position: relative;
     }
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3.5rem;
         width: 3.2rem;
     }
@@ -1239,7 +1239,7 @@
         position: relative;
     }
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3.5rem;
         width: 3.2rem;
     }
@@ -1444,11 +1444,11 @@
 
     /* SKILL SECTION */
 
-    .heading__primary {
+    .skill__content h3 {
         font-size: 2.3rem;
     }
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3rem;
         width: 2.3rem;
     }
@@ -1657,11 +1657,11 @@
 
     /* SKILL SECTION */
 
-    .heading__primary {
+    .skill__content h3 {
         font-size: 2.3rem;
     }
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3rem;
         width: 2.3rem;
     }
@@ -1878,7 +1878,7 @@
 
     /* SKILL SECTION */
 
-    .heading__primary::after {
+    .skill__content h3::after {
         top: 3rem;
         width: 2.3rem;
     }
