--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,7 @@ nav {
   width: 100%;
 }
 
-.heading__primary {
+.skill__content h3 {
   display: flex;
   justify-content: center;
   font-size: 4.8rem;
@@ -534,7 +534,7 @@ nav {
   color: var(--color-white-second);
 }
 
-.heading__primary::after{
+.skill__content h3::after{
   content: '';
   height: .3rem;
   left: .5rem;
