--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,6 @@ nav {
   color: var(--color-white);
 }
 
-
 /**********************************************
           *** HERO SECTION *** - START
 **********************************************/
@@ -871,19 +870,20 @@ nav {
 .contact {
   display: flex;
   align-items: center;
-  min-height: 94.35vh;
+  justify-content: center;
+  min-height: 55vh;
   max-width: 100%;
+  height: 57.5rem;
   margin: auto;
   background: var(--color-primary);
 }
 
 .contact-content {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
   align-items: center;
-  height: 70.5rem;
+  justify-content: center;
   max-width: 100%;
+  height: 25rem;
 }
 
 
@@ -893,7 +893,6 @@ nav {
   align-items: center;
   height: 20vh;
   max-width: 90%;
-  margin-top: 10rem;
 }
 
 .contact-header-title {
@@ -935,7 +934,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70.5rem;
+  height: 55rem;
   width: 68.5rem;
 }
 
@@ -964,12 +963,15 @@ footer {
   width: 90%;
 }
 
-
 .footer__title h3 {
   font-size: 2.5rem;
   color: var(--color-white);
 }
 
+.footer__social{
+  display: flex;
+  
+}
 
 .footer__contact {
   padding: 2rem 1rem;
@@ -978,16 +980,13 @@ footer {
 .footer__contact p {
   margin-top: 1rem;
   font-size: 1.5rem;
+  color: var(--color-white);
 }
 
 .footer__contact h4,
 .footer__platform h4 {
   font-size: 2.5rem;
   text-align: center;
-  color: var(--color-white);
-}
-
-footer p {
   color: var(--color-white);
 }
 
@@ -1005,7 +1004,7 @@ footer p {
 .footer__platform img{
   margin: .5rem .5rem 0;
   width: 25px;
-  height: 100%;
+  height: 25px;
 }
 
 .year{
