--- a/css/mq.css
+++ b/css/mq.css
@@ -1334,6 +1334,7 @@
 
     .skill__content--stack {
         font-size: 1.5rem;
+        outline: none;
     }
 
     .skill__content--stack:nth-child(1) {
@@ -1496,6 +1497,7 @@
 
       .footer__platform img{
         margin: .5rem .5rem 0;
+        width: 25px;
         width: 25px;
       }
 
@@ -1718,7 +1720,8 @@
 
       .footer__platform img{
         margin: .5rem .5rem 0;
-        width: 25px;
+        width: 20px;
+        height: 20px;
       }
 
       .year{
@@ -1935,6 +1938,7 @@
 
     .footer__platform img{
         width: 20px;
+        height: 20px;
     }
 }
 
@@ -2166,6 +2170,7 @@
       .footer__platform img{
         margin: .5rem .5rem 0;
         width: 20px;
+        height: 20px;
       }
 
       .year{
