--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,7 @@ nav {
   font-size: 2.5rem;
   text-decoration: none;
   outline-style: none;
+  outline: none;
   transition: all .5s ease;
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
