--- a/css/style.css
+++ b/css/style.css
@@ -167,11 +167,15 @@ nav {
 .navigation__scroll .logo {
   font-size: 2.5rem;
   padding: 20px 0;
+  outline-style: none;
+  outline: none;
 }
 
 .navigation__scroll .navigation__items a {
   font-size: 2rem;
   padding: 1rem 0;
+  outline-style: none;
+  outline: none;
   border: none;
   transition: all .3s;
   -webkit-transition: all .3s;
